@@ -4,16 +4,17 @@ package com.team9.anicare.domain.chat.service;
 import com.team9.anicare.domain.chat.dto.ChatRoomCreateRequestDTO;
 import com.team9.anicare.domain.chat.dto.ChatRoomResponseDTO;
 import com.team9.anicare.domain.chat.entity.ChatMessage;
+import com.team9.anicare.domain.chat.entity.ChatParticipant;
 import com.team9.anicare.domain.chat.entity.ChatRoom;
 import com.team9.anicare.domain.chat.repository.ChatMessageRepository;
 import com.team9.anicare.domain.chat.repository.ChatParticipantRepository;
 import com.team9.anicare.domain.chat.repository.ChatRoomRepository;
 import com.team9.anicare.domain.user.model.User;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * - 채팅방 생성, 조회, 검색, 참여자 관리 등 채팅방 관련 비즈니스 로직을 처리하는 서비스 클래스
@@ -61,7 +62,7 @@ public class ChatRoomService {
         );
 
         // DTO로 변환하여 반환
-        return convertToDTO(chatRoom);
+        return convertToDTO(chatRoom, userId);
     }
 
 
@@ -71,10 +72,11 @@ public class ChatRoomService {
      *
      * @return 전체 채팅방 목록 DTO
      */
-    public List<ChatRoomResponseDTO> getAllChatRooms() {
-        return chatRoomRepository.findAll().stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
+    public Page<ChatRoomResponseDTO> getAllChatRooms(int page, int size) {
+        Pageable pageable = PageRequest.of(page, size, Sort.by("createdAt").descending());
+
+        return chatRoomRepository.findAll(pageable)
+                .map(chatRoom -> convertToDTO(chatRoom, null));
     }
 
 
@@ -83,10 +85,11 @@ public class ChatRoomService {
      *
      * @return 관리자가 없는 채팅방 목록
      */
-    public List<ChatRoomResponseDTO> getWaitingRooms() {
-        return chatRoomRepository.findByOccupiedFalse().stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
+    public Page<ChatRoomResponseDTO> getWaitingRooms(int page, int size) {
+        Pageable pageable = PageRequest.of(page, size, Sort.by("createdAt").descending());
+
+        return chatRoomRepository.findByOccupiedFalse(pageable)
+                .map(chatRoom -> convertToDTO(chatRoom, null));
     }
 
 
@@ -94,10 +97,12 @@ public class ChatRoomService {
      * ✅ 관리자 전용 - 전체 채팅방 검색
      * - 채팅방 이름, 설명, 메시지 내용에서 키워드를 검색
      */
-    public List<ChatRoomResponseDTO> searchAllChatRooms(String keyword) {
+    public Page<ChatRoomResponseDTO> searchAllChatRooms(String keyword, int page, int size) {
+        Pageable pageable = PageRequest.of(page, size, Sort.by("createdAt").descending());
+
         // 1. 채팅방 이름 또는 설명 검색
-        List<ChatRoom> roomsByNameOrDescription = chatRoomRepository
-                .findByRoomNameContainingIgnoreCaseOrDescriptionContainingIgnoreCase(keyword, keyword);
+        Page<ChatRoom> roomsByNameOrDescription = chatRoomRepository
+                .findByRoomNameContainingIgnoreCaseOrDescriptionContainingIgnoreCase(keyword, keyword, pageable);
 
         // 2. 메시지 내용에 키워드가 포함된 채팅방 ID 검색
         List<String> roomIdsByMessages = chatMessageRepository
@@ -108,13 +113,16 @@ public class ChatRoomService {
                 .findByRoomIdIn(roomIdsByMessages);
 
         // 4. 두 결과 합치고 중복 제거
-        roomsByNameOrDescription.addAll(roomsByMessages);
-        List<ChatRoom> combinedRooms = roomsByNameOrDescription.stream().distinct().toList();
+        List<ChatRoom> combinedRooms = roomsByNameOrDescription.getContent();
+        combinedRooms.addAll(roomsByMessages);
+        List<ChatRoom> distinctRooms = combinedRooms.stream().distinct().toList();
 
         // 5. DTO 변환
-        return combinedRooms.stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
+        return new PageImpl<>(
+                distinctRooms.stream().map(chatRoom -> convertToDTO(chatRoom, null)).toList(),
+                pageable,
+                distinctRooms.size()
+        );
     }
 
 
@@ -122,7 +130,9 @@ public class ChatRoomService {
      * ✅ 사용자 전용 - 본인이 참여하거나 생성한 채팅방 검색
      * - 채팅방 이름, 설명, 메시지 내용에서 키워드를 검색
      */
-    public List<ChatRoomResponseDTO> searchUserChatRooms(Long userId, String keyword) {
+    public Page<ChatRoomResponseDTO> searchUserChatRooms(Long userId, String keyword, int page, int size) {
+        Pageable pageable = PageRequest.of(page, size, Sort.by("createdAt").descending());
+
         // 1. 사용자가 참여 중인 채팅방 ID 조회
         List<String> participantRoomIds = chatParticipantRepository.findRoomIdsByUserId(userId);
 
@@ -143,9 +153,11 @@ public class ChatRoomService {
         List<ChatRoom> combinedRooms = createdRooms.stream().distinct().toList();
 
         // 5. DTO 변환 및 반환
-        return combinedRooms.stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
+        return new PageImpl<>(
+                combinedRooms.stream().map(chatRoom -> convertToDTO(chatRoom, userId)).toList(),
+                pageable,
+                combinedRooms.size()
+        );
     }
 
 
@@ -155,18 +167,20 @@ public class ChatRoomService {
      * @param userId 사용자 ID
      * @return 사용자가 생성한 채팅방 정보 DTO (없으면 예외 발생)
      */
-    public List<ChatRoomResponseDTO> getRoomsByUserId(Long userId) {
-        // 사용자가 생성한 채팅방 조회
-        List<ChatRoom> chatRooms = chatRoomRepository.findByCreatorId(userId);
+    public Page<ChatRoomResponseDTO> getRoomsByUserId(Long userId, int page, int size) {
+        Pageable pageable = PageRequest.of(page, size, Sort.by("createdAt").descending());
 
-        if (chatRooms.isEmpty()) {
+        // 페이지네이션 적용해서 채팅방 조회
+        Page<ChatRoom> chatRoomsPage = chatRoomRepository.findByCreatorId(userId, pageable);
+
+
+        // 조회된 결과가 없을 경우 예외 처리
+        if (chatRoomsPage.isEmpty()) {
             throw new IllegalArgumentException("생성한 채팅방이 없습니다.");
         }
 
         // DTO로 변환 후 반환
-        return chatRooms.stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
+        return chatRoomsPage.map(chatRoom -> convertToDTO(chatRoom, userId));
     }
 
 
@@ -176,9 +190,14 @@ public class ChatRoomService {
      * @param chatRoom 변환할 채팅방 엔티티
      * @return 채팅방 응답 DTO
      */
-    private ChatRoomResponseDTO convertToDTO(ChatRoom chatRoom) {
-        User creator = chatRoom.getCreator();
+    private ChatRoomResponseDTO convertToDTO(ChatRoom chatRoom, Long currentUserId) {
+// 현재 사용자를 제외한 상대방 찾기
+        ChatParticipant opponentParticipant = chatParticipantRepository.findByChatRoom(chatRoom).stream()
+                .filter(participant -> !participant.getUser().getId().equals(currentUserId))
+                .findFirst()
+                .orElse(null);
 
+        User opponent = (opponentParticipant != null) ? opponentParticipant.getUser() : null;
         return ChatRoomResponseDTO.builder()
                 .roomId(chatRoom.getRoomId())
                 .roomName(chatRoom.getRoomName())
@@ -187,10 +206,10 @@ public class ChatRoomService {
                 .lastMessage(chatRoom.getLastMessage())
                 .lastMessageTime(chatRoom.getLastMessageTime())
                 .createdAt(chatRoom.getCreatedAt())
-                // 생성자 정보 추가
-                .creatorId(creator.getId())
-                .creatorName(creator.getName())
-                .creatorProfileImage(creator.getProfileImg())
+                // 상대방 정보 추가
+                .opponentId(opponent != null ? opponent.getId() : null)
+                .opponentName(opponent != null ? opponent.getName() : "상대방 없음")
+                .opponentProfileImage(opponent != null ? opponent.getProfileImg() : null)
                 .build();
     }
 }
